--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
-    <meta charset="utf-8">
-    <title>Prueba VR con Avatar</title>
-    <!--<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
+    <meta charset="utf-8" />
+    <title>Avatar en Realidad Aumentada</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <!-- Módulo AR -->
+    <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.2.0/dist/aframe-ar.min.js"></script>
   </head>
-  <body>
-    <a-scene>
+  <body style="margin: 0; overflow: hidden;">
+    <!-- Escena con soporte WebXR AR -->
+    <a-scene
+      embedded
+      vr-mode-ui="enabled: false"
+      xr-mode-ui="enabled: true"
+      webxr="mode: ar; optionalFeatures: hit-test;"
+      renderer="colorManagement: true; physicallyCorrectLights: true;"
+    >
+      <!-- Cargamos el modelo -->
       <a-assets timeout="30000">
         <a-asset-item id="avatar" src="avatar-animación.glb"></a-asset-item>
       </a-assets>
 
-      <a-camera position="0 1.2 0"></a-camera>
+      <!-- Luz para el modelo -->
+      <a-entity light="type: directional; intensity: 1;" position="0 4 4"></a-entity>
+      <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
 
-      <!-- 2D environment omitted for simplicity -->
+      <!-- Modelo del avatar -->
+      <a-entity
+        gltf-model="#avatar"
+        scale="1 1 1"
+        animation-mixer
+        shadow="cast: true;"
+        visible="false"
+        id="avatar-model"
+      ></a-entity>
 
-      <a-entity id="avatar" position="0 0 -3" scale="1 1 1">
-        <a-entity position="0 0 -3" rotation="0 5 0"
-                  gltf-model="#avatar"
-                  animation-mixer
-                  shadow="cast: true; receive: false">
-        </a-entity>
-      </a-entity>
+      <!-- Retícula para colocar el modelo en el plano detectado -->
+      <a-entity
+        id="cursor"
+        geometry="primitive: ring; radiusInner: 0.03; radiusOuter: 0.05;"
+        material="color: yellow; shader: flat;"
+        position="0 0 -0.5"
+      ></a-entity>
 
-      <!-- Lights configuration omitted for simplicity -->
+      <a-camera position="0 0 0"></a-camera>
     </a-scene>
+
+    <script>
+      // Cuando se detecta una superficie (hit-test), colocar el modelo ahí
+      const scene = document.querySelector("a-scene");
+      let avatar = document.getElementById("avatar-model");
+
+      scene.addEventListener("enter-vr", () => {
+        if (scene.xrSession && scene.xrSession.environmentBlendMode === "ar") {
+          avatar.setAttribute("visible", true);
+        }
+      });
+    </script>
   </body>
 </html>
