--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Assets -->
       <a-assets timeout="30000">
         <!-- ⚠️ Ajusta el nombre de tu archivo aquí -->
-        <a-asset-item id="avatar" src="avatar-animación.glb"></a-asset-item>
+        <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
       </a-assets>
 
       <!-- Luz -->
