--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8" />
-    <title>Avatar AR Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <title>Prueba AR con A-Frame</title>
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.8.0/dist/aframe-ar.min.js"></script>
   </head>
-  <body style="margin:0; overflow:hidden;">
+  <body style="margin: 0; overflow: hidden;">
     <a-scene
-      webxr="mode: ar; optionalFeatures: hit-test;"
-      embedded
       vr-mode-ui="enabled: false"
-      renderer="colorManagement: true; physicallyCorrectLights: true;"
-    >
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+      embedded
+      renderer="logarithmicDepthBuffer: true;">
+      
       <a-assets timeout="30000">
         <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
       </a-assets>
 
-      <a-entity light="type: ambient; intensity: 0.5"></a-entity>
-      <a-entity light="type: directional; intensity: 1" position="0 2 2"></a-entity>
+      <a-marker-camera preset="hiro"></a-marker-camera>
 
-      <a-entity gltf-model="#avatar" scale="0.8 0.8 0.8" position="0 0 -1" animation-mixer></a-entity>
-      <a-camera></a-camera>
+      <a-entity 
+        gltf-model="#avatar"
+        position="0 0 0"
+        scale="0.5 0.5 0.5"
+        animation-mixer>
+      </a-entity>
+
     </a-scene>
   </body>
 </html>
