--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Prueba AR con A-Frame</title>
+    <title>Prueba VR con Avatar</title>
+    <!--<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-ar@1.8.0/dist/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene
-      vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-      embedded
-      renderer="logarithmicDepthBuffer: true;">
-      
+  <body>
+    <a-scene>
       <a-assets timeout="30000">
         <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
       </a-assets>
 
-      <a-marker-camera preset="hiro"></a-marker-camera>
+      <a-camera position="0 1.2 0"></a-camera>
 
-      <a-entity 
-        gltf-model="#avatar"
-        position="0 0 0"
-        scale="0.5 0.5 0.5"
-        animation-mixer>
+      <!-- 2D environment omitted for simplicity -->
+
+      <a-entity id="avatar" position="0 0 -3" scale="1 1 1">
+        <a-entity position="0 0 -3" rotation="0 5 0"
+                  gltf-model="#avatar"
+                  animation-mixer
+                  shadow="cast: true; receive: false">
+        </a-entity>
       </a-entity>
 
+      <!-- Lights configuration omitted for simplicity -->
     </a-scene>
   </body>
 </html>
