--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Prueba VR con Avatar</title>
-    <!--<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
-    <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-  </head>
-  <body>
-    <a-scene>
-      <a-assets timeout="30000">
-        <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
-      </a-assets>
+<a-scene
+  renderer="antialias: true; colorManagement: true;"
+  xr-mode-ui="enabled: true"
+  webxr="optionalFeatures: hit-test;"
+  background="color: #000000"
+  vr-mode-ui="enabled: false">
+  
+  <a-assets timeout="30000">
+    <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
+  </a-assets>
 
-      <a-camera position="0 1.2 0"></a-camera>
+  <!-- Cámara controlada por el móvil -->
+  <a-camera position="0 1.6 0"></a-camera>
 
-      <!-- 2D environment omitted for simplicity -->
-
-      <a-entity id="avatar" position="0 0 -3" scale="1 1 1">
-        <a-entity position="0 0 -3" rotation="0 5 0"
-                  gltf-model="#avatar"
-                  animation-mixer
-                  shadow="cast: true; receive: false">
-        </a-entity>
-      </a-entity>
-
-      <!-- Lights configuration omitted for simplicity -->
-    </a-scene>
-  </body>
-</html>
+  <!-- Avatar que aparecerá frente a ti -->
+  <a-entity
+    gltf-model="#avatar"
+    position="0 0 -2"
+    scale="1 1 1"
+    animation-mixer>
+  </a-entity>
+</a-scene>
