--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       <!-- Assets -->
       <a-assets timeout="30000">
-        <a-asset-item id="avatar" src="avatar-animacion.glb"></a-asset-item>
+        <a-asset-item id="avatar" src="avatar.glb"></a-asset-item>
       </a-assets>
 
       <!-- Luz -->
