--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <a-scene>
       <a-assets timeout="30000">
-        <a-asset-item id="spinosaurus" src="dino-model.glb"></a-asset-item>
+        <a-asset-item id="avatar" src="avatar.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 1.2 0"></a-camera>
 
       <!-- 2D environment omitted for simplicity -->
 
-      <a-entity id="dino" position="-1 0 -3" scale="0.5 0.5 0.5">
+      <a-entity id="avatar" position="-1 0 -3" scale="0.5 0.5 0.5">
         <a-entity position="0 2.15 0" rotation="0 55 0"
-                  gltf-model="#spinosaurus"
+                  gltf-model="#avatar"
                   animation-mixer
                   shadow="cast: true; receive: false">
         </a-entity>
