--- a/index.html
+++ b/index.html
@@ -251,15 +251,25 @@
         log(`Cámara en: (${cameraPos.x.toFixed(2)}, ${cameraPos.y.toFixed(2)}, ${cameraPos.z.toFixed(2)})`);
         log(`Avatar en: (${targetPos.x.toFixed(2)}, ${targetPos.y.toFixed(2)}, ${targetPos.z.toFixed(2)})`);
 
-        // Crear cubo de referencia GRANDE y visible
+        // Crear cubo de referencia MÁS GRANDE Y BRILLANTE
         const testCube = document.createElement('a-box');
-        testCube.setAttribute('position', `${targetPos.x} ${targetPos.y + 1} ${targetPos.z}`);
-        testCube.setAttribute('scale', '0.3 0.3 0.3');
+        testCube.setAttribute('position', `${targetPos.x} ${targetPos.y + 2} ${targetPos.z}`);
+        testCube.setAttribute('scale', '1 1 1'); // MUCHO MÁS GRANDE
         testCube.setAttribute('color', '#FF0000');
-        testCube.setAttribute('material', 'shader: flat');
+        testCube.setAttribute('material', 'shader: flat; emissive: #FF0000; emissiveIntensity: 1');
         testCube.setAttribute('animation', 'property: rotation; to: 0 360 0; loop: true; dur: 2000');
         sceneEl.appendChild(testCube);
-        log('✓ Cubo rojo colocado como referencia');
+        
+        // Añadir esfera verde también
+        const sphere = document.createElement('a-sphere');
+        sphere.setAttribute('position', `${targetPos.x} ${targetPos.y + 3} ${targetPos.z}`);
+        sphere.setAttribute('radius', '0.5');
+        sphere.setAttribute('color', '#00FF00');
+        sphere.setAttribute('material', 'shader: flat; emissive: #00FF00; emissiveIntensity: 1');
+        sphere.setAttribute('animation', 'property: position; to: ' + targetPos.x + ' ' + (targetPos.y + 3.5) + ' ' + targetPos.z + '; dir: alternate; loop: true; dur: 1000');
+        sceneEl.appendChild(sphere);
+        
+        log('✓ Cubo rojo y esfera verde colocados como referencia');
 
         // Crear el avatar
         avatarEntity = document.createElement('a-entity');
