--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         // Crear el avatar
         avatarEntity = document.createElement('a-entity');
         avatarEntity.setAttribute('gltf-model', '#avatar');
-        avatarEntity.setAttribute('scale', '2 2 2'); // ESCALA GRANDE
+        avatarEntity.setAttribute('scale', '3 3 3'); // ESCALA MUY GRANDE
         avatarEntity.setAttribute('position', `${targetPos.x} ${targetPos.y} ${targetPos.z}`);
         
         // Rotar hacia la cámara
