--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           container.removeChild(container.firstChild);
         }
         
-        const cubes = document.querySelectorAll('a-box');
+        const cubes = document.querySelectorAll('a-box, a-sphere');
         cubes.forEach(c => c.remove());
         
         instructions.innerHTML = 'Toca la pantalla para colocar el avatar';
