--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           instructions.innerHTML = 'Error al cargar avatar.glb<br>¿Está el archivo en la misma carpeta?';
         });
 
-        instructions.innerHTML = 'Colocando avatar...<br>Busca un cubo rojo girando';
+        instructions.innerHTML = 'Colocando avatar...<br>Busca un CUBO ROJO GRANDE girando 360°<br>Debería estar frente a ti a 5 metros';
       }
 
       function resetAvatar() {
