--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
   <body style="margin: 0; overflow: hidden;">
     <a-scene
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-      vr-mode-ui="enabled: false">
+      arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
+      vr-mode-ui="enabled: false"
+      renderer="logarithmicDepthBuffer: true;">
       
       <a-assets timeout="30000">
         <a-asset-item id="avatar" src="avatar.glb"></a-asset-item>
       </a-assets>
 
-      <!-- Marcador AR (usa el marcador Hiro por defecto) -->
-      <a-marker preset="hiro">
-        <a-entity
-          gltf-model="#avatar"
-          animation-mixer
-          scale="0.5 0.5 0.5"
-          position="0 0 0">
-        </a-entity>
-      </a-marker>
+      <!-- Avatar que aparece cuando tocas la pantalla -->
+      <a-entity
+        id="avatar-model"
+        gltf-model="#avatar"
+        animation-mixer
+        scale="0.3 0.3 0.3"
+        position="0 -1 -2"
+        visible="true">
+      </a-entity>
 
-      <a-entity camera></a-entity>
+      <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
   </body>
 </html>
