--- a/index.html
+++ b/index.html
@@ -6,30 +6,22 @@
     <title>Avatar AR</title>
     <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene
-      embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
-      vr-mode-ui="enabled: false"
-      renderer="logarithmicDepthBuffer: true;">
+  <body>
+    <a-scene webxr="requiredFeatures: hit-test,local-floor;">
       
       <a-assets timeout="30000">
         <a-asset-item id="avatar" src="avatar.glb"></a-asset-item>
       </a-assets>
 
-      <!-- Avatar que aparece cuando tocas la pantalla -->
       <a-entity
-        id="avatar-model"
         gltf-model="#avatar"
         animation-mixer
-        scale="0.3 0.3 0.3"
-        position="0 -1 -2"
-        visible="true">
+        scale="0.5 0.5 0.5"
+        position="0 0 -2">
       </a-entity>
 
-      <a-camera gps-camera rotation-reader></a-camera>
+      <a-camera></a-camera>
     </a-scene>
   </body>
 </html>
