--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Avatar AR</title>
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      model-viewer {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
+    <title>Prueba VR con Avatar</title>
+    <!--<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
+    <script src="https://aframe.io/releases/1.7.1/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
   </head>
   <body>
-    <model-viewer
-      src="avatar.glb"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      camera-controls
-      auto-rotate
-      shadow-intensity="1"
-      alt="Avatar 3D">
-    </model-viewer>
+    <a-scene>
+      <a-assets timeout="30000">
+        <a-asset-item id="avatar" src="avatar.glb"></a-asset-item>
+      </a-assets>
+
+      <a-camera position="0 1.2 0"></a-camera>
+
+      <!-- 2D environment omitted for simplicity -->
+
+      <a-entity id="avatar" position="-1 0 -3" scale="0.5 0.5 0.5">
+        <a-entity 
+            id="avatar"
+            scale="8 8 8"
+            position="-2 -10 -18"
+            gltf-model="#avatar"
+            animation-mixer
+            shadow="cast: true; receive: false">
+        </a-entity>
+      </a-entity>
+
+      <!-- Lights configuration omitted for simplicity -->
+    </a-scene>
   </body>
 </html>
